[gd_scene load_steps=16 format=3 uid="uid://728xo0t3m477"]

[ext_resource type="Theme" uid="uid://evv5alve252b" path="res://main/theme/theme.tres" id="1_0e0l4"]
[ext_resource type="Script" path="res://main/world/ui/shop_menu/shop_menu.gd" id="2_8cqnn"]
[ext_resource type="Shader" path="res://main/battle/ui/battle_background/background_image_wave.gdshader" id="2_f0jaj"]
[ext_resource type="Texture2D" uid="uid://bbyv34w3mao51" path="res://main/battle/ui/choice_menu/arrow.png" id="2_mg701"]
[ext_resource type="Texture2D" uid="uid://duig11rt8jtcp" path="res://main/theme/palette_dark.png" id="3_0audf"]
[ext_resource type="Texture2D" uid="uid://1bbhd85mjdb6" path="res://main/battle/fighter/ella/ella.png" id="3_1hmb4"]
[ext_resource type="PackedScene" uid="uid://7ffg50pelcx6" path="res://main/battle/ui/choice_menu/choice_button/choice_button.tscn" id="4_ctio6"]
[ext_resource type="FontFile" uid="uid://cauc77kjpc67c" path="res://main/theme/mini_kiwi_font.ttf" id="4_ifx36"]
[ext_resource type="Texture2D" uid="uid://bkun1agq8ikk2" path="res://main/battle/ui/battle_background/textures/big_dots.png" id="4_jo51e"]
[ext_resource type="Texture2D" uid="uid://emchhlwgswks" path="res://main/battle/ui/battle_background/textures/square.png" id="5_cfrck"]
[ext_resource type="PackedScene" uid="uid://b2x6gyr2bsiwy" path="res://main/world/ui/shop_menu/soul_text.tscn" id="6_wn2t7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pijvu"]
shader = ExtResource("2_f0jaj")
shader_parameter/palette_size = 13
shader_parameter/idx_1 = 0
shader_parameter/idx_2 = 1
shader_parameter/idx_3 = 2
shader_parameter/idx_4 = 3
shader_parameter/speed_a = 0.08
shader_parameter/speed_b = 0.1
shader_parameter/speed_c = 64.0
shader_parameter/wave_a = 0.2
shader_parameter/wave_b = 0.3
shader_parameter/palette = ExtResource("3_0audf")
shader_parameter/tex_a = ExtResource("4_jo51e")
shader_parameter/tex_b = ExtResource("4_jo51e")
shader_parameter/tex_c = ExtResource("5_cfrck")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exa1y"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 0)

[sub_resource type="FontVariation" id="FontVariation_nl477"]
base_font = ExtResource("4_ifx36")
spacing_space = -3
spacing_top = -6
spacing_bottom = -1

[sub_resource type="FontVariation" id="FontVariation_pbgfg"]
base_font = ExtResource("4_ifx36")
spacing_space = -3
spacing_top = -6
spacing_bottom = -1

[node name="ShopMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0e0l4")
script = ExtResource("2_8cqnn")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pijvu")
layout_mode = 2
color = Color(0.265361, 0.265361, 0.265361, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_exa1y")

[node name="Control" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 2.0
offset_right = 55.0
offset_bottom = 5.0
size_flags_horizontal = 4

[node name="Left" type="TextureRect" parent="PanelContainer/Control/TitleContainer"]
layout_mode = 2
texture = ExtResource("2_mg701")
flip_h = true

[node name="SkillNameLabel" type="Label" parent="PanelContainer/Control/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "skill name"

[node name="Right" type="TextureRect" parent="PanelContainer/Control/TitleContainer"]
layout_mode = 2
texture = ExtResource("2_mg701")

[node name="OwnerContainer" type="HBoxContainer" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 15.0
offset_top = 8.0
offset_right = 42.0
offset_bottom = 16.0
size_flags_horizontal = 4
theme_override_constants/separation = 3

[node name="FighterIcon" type="TextureRect" parent="PanelContainer/Control/OwnerContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_1hmb4")

[node name="FighterNameLabel" type="Label" parent="PanelContainer/Control/OwnerContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_nl477")
text = "ella"

[node name="Description" type="Label" parent="PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1.0
offset_top = 30.0
offset_right = 59.0
offset_bottom = 45.0
theme_override_constants/line_spacing = 0
text = "description
description a aaaa"
autowrap_mode = 2

[node name="SoulContainer" type="HBoxContainer" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 1.0
offset_top = 52.0
offset_right = 23.0
offset_bottom = 57.0
size_flags_vertical = 10
theme_override_constants/separation = 0

[node name="Cost" type="Label" parent="PanelContainer/Control/SoulContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_fonts/font = SubResource("FontVariation_pbgfg")
text = "souls:"
vertical_alignment = 2
justification_flags = 160

[node name="SoulText" parent="PanelContainer/Control/SoulContainer" instance=ExtResource("6_wn2t7")]
unique_name_in_owner = true
position = Vector2(23, -1)

[node name="ActionContainer" type="HBoxContainer" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 18.0
offset_top = 18.0
offset_right = 59.0
offset_bottom = 28.0
size_flags_horizontal = 4
theme_override_constants/separation = 2

[node name="ChoiceButton" parent="PanelContainer/Control/ActionContainer" instance=ExtResource("4_ctio6")]
unique_name_in_owner = true
layout_mode = 2

[node name="PriceText" parent="PanelContainer/Control/ActionContainer" instance=ExtResource("6_wn2t7")]
unique_name_in_owner = true
position = Vector2(11, 2)

[node name="BoughtLabel" type="Label" parent="PanelContainer/Control/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_nl477")
text = "owned"
